# pysuika

./: README.md  pyproject.toml
examples/: random_agent.py
src/pysuika/: __init__.py  __main__.py
src/pysuika.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pysuika/agents/: base.py
src/pysuika/config/: __init__.py  config.py  default.yaml
src/pysuika/game/: __init__.py  actions.py  engine.py  state.py
src/pysuika/logging/: __init__.py  events.py  logger.py  state_serializer.py
src/pysuika/physics/: __init__.py  collision.py  particle.py  preparticle.py  wall.py
src/pysuika/ui/: __init__.py  cloud.py  renderer.py
